--- a/assets/terminal.css
+++ b/assets/terminal.css
@@ -1,10 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgba(48, 10, 36, 0.85);
+  background-color: rgba(58, 20, 46, 0.90);
   color: #ffffff;
-  font-family: 'Ubuntu', monospace;
+  font-family: 'Ubuntu Mono', monospace;
   font-size: 12pt;
+  box-shadow: 0px 0px 5px rgba(0,0,0,0.75);
 }
 #toolbar {
   background-color: #333333;
@@ -50,11 +51,12 @@ body {
 }
 #cmdline {
   height: 100%;
-  font-family: sans-serif;
-  font-size: 10pt;
+  font-family: 'Ubuntu Mono', monospace;
+  font-size: 16pt;
   padding: 5px;
   word-break: break-all;
   overflow-y: auto;
+  background: none !important;
 }
 #cmdline pre {
   margin: 0;
